[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip = true



[package]
name = "bitches"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AradiaIsStupid/bitches"
description = "no bitches ?"
license = "MIT"
categories = ["cli","memes"]

include = [
    "**/*.rs",
    "Cargo.toml",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.7.0"
